@@ -1,7 +1,6 @@
 package com.ecounsellor.backend.counselling.service;
 
 import com.ecounsellor.backend.core.entity.College;
-import com.ecounsellor.backend.core.ml.MLClient;
 import com.ecounsellor.backend.core.repository.CollegeRepository;
 import com.ecounsellor.backend.core.repository.CutoffRepository;
 import com.ecounsellor.backend.counselling.dto.CounsellingDTOs.*;
@@ -21,23 +20,20 @@ public class CounsellingService {
     private final StudentShortlistRepository shortlistRepo;
     private final CutoffRepository           cutoffRepo;
     private final CollegeRepository          collegeRepo;
-    private final MLClient                   mlClient;
 
     public CounsellingService(
             StudentViewRepository      viewRepo,
             StudentShortlistRepository shortlistRepo,
             CutoffRepository           cutoffRepo,
-            CollegeRepository          collegeRepo,
-            MLClient                   mlClient) {
+            CollegeRepository          collegeRepo) {
         this.viewRepo      = viewRepo;
         this.shortlistRepo = shortlistRepo;
         this.cutoffRepo    = cutoffRepo;
         this.collegeRepo   = collegeRepo;
-        this.mlClient      = mlClient;
     }
 
     // ══════════════════════════════════════════════════════════════════════════
-    // TRACK EVENTS (called from Android app silently)
+    // EVENT TRACKING
     // ══════════════════════════════════════════════════════════════════════════
 
     public void recordView(ViewEventRequest req) {
@@ -54,7 +50,7 @@ public class CounsellingService {
     public void recordShortlist(ShortlistRequest req) {
         StudentShortlist s = new StudentShortlist();
         s.setCollegeCode(req.collegeCode);
-        s.setCourseCode(req.courseCode);
+        s.setCourseCode(req.courseCode != null ? req.courseCode : "");
         s.setCourseName(req.courseName);
         s.setStudentPercentile(req.studentPercentile);
         s.setCategory(req.category);
@@ -70,28 +66,27 @@ public class CounsellingService {
 
     public InterestedStudentsResponse getInterestedStudents(String collegeCode) {
         InterestedStudentsResponse resp = new InterestedStudentsResponse();
-        resp.collegeCode    = collegeCode;
-        resp.totalViews     = viewRepo.countByCollegeCode(collegeCode);
+        resp.collegeCode     = collegeCode;
+        resp.totalViews      = viewRepo.countByCollegeCode(collegeCode);
         resp.totalShortlists = shortlistRepo.countByCollegeCode(collegeCode);
 
-        // -- Percentile band distribution (overall) --
+        // Percentile band distribution from views
         List<Object[]> bandRows = viewRepo.percentileBandDistribution(collegeCode);
         resp.percentileBands = bandRows.stream()
             .map(r -> new PercentileBand((String) r[0], (Long) r[1]))
             .collect(Collectors.toList());
 
-        // -- Category breakdown (overall) --
+        // Category breakdown from views
         List<Object[]> catRows = viewRepo.countViewsByCategory(collegeCode, null);
         resp.byCategory = catRows.stream()
             .map(r -> new CategoryCount((String) r[0], (Long) r[1]))
             .collect(Collectors.toList());
 
-        // -- Branch-level shortlist counts --
-        List<Object[]> branchRows = shortlistRepo.countShortlistsByBranch(collegeCode);
-        // branch+category breakdown
+        // Branch-level shortlist counts
+        List<Object[]> branchRows    = shortlistRepo.countShortlistsByBranch(collegeCode);
         List<Object[]> branchCatRows = shortlistRepo.countShortlistsByBranchAndCategory(collegeCode);
 
-        // Group branch+category by courseCode
+        // Group categories by courseCode
         Map<String, List<CategoryCount>> catByBranch = new LinkedHashMap<>();
         for (Object[] r : branchCatRows) {
             String code = (String) r[0];
@@ -99,10 +94,9 @@ public class CounsellingService {
                        .add(new CategoryCount((String) r[2], (Long) r[3]));
         }
 
-        // Get view counts per branch
-        List<Object[]> viewBranchRows = viewRepo.countViewsByCourse(collegeCode);
+        // View counts per branch
         Map<String, Long> viewsByBranch = new LinkedHashMap<>();
-        for (Object[] r : viewBranchRows) {
+        for (Object[] r : viewRepo.countViewsByCourse(collegeCode)) {
             viewsByBranch.put((String) r[0], (Long) r[1]);
         }
 
@@ -119,55 +113,44 @@ public class CounsellingService {
     }
 
     // ══════════════════════════════════════════════════════════════════════════
-    // FEATURE 2: TARGET POOL (students to target, for a specific branch+category)
+    // FEATURE 2: TARGET POOL
     // ══════════════════════════════════════════════════════════════════════════
 
     public TargetPoolResponse getTargetPool(
             String collegeCode, String courseCode,
             String capCategoryCode, int round) {
 
-        // Get the actual cutoff for this branch+category from DB
         List<Double> cutoffs = cutoffRepo.findCutoffForPrediction(
             collegeCode, courseCode, capCategoryCode);
 
-        double lastCutoff = cutoffs.isEmpty() ? 50.0 : cutoffs.get(0);
+        double lastCutoff      = cutoffs.isEmpty() ? 50.0 : cutoffs.get(0);
+        double predictedCutoff = lastCutoff + (round > 2 ? 0.5 : 1.0);
+        double targetMin       = Math.max(0,   Math.round((predictedCutoff - 5.0)  * 100.0) / 100.0);
+        double targetMax       = Math.min(100, Math.round((predictedCutoff + 10.0) * 100.0) / 100.0);
+        String category        = extractCategory(capCategoryCode);
 
-        // ML predicted cutoff
-        List<Double> preds = mlClient.getBatchProbabilities(lastCutoff, List.of(lastCutoff));
-        // We use the batch endpoint differently here: we ask for probability at cutoff itself
-        // which gives 0.5 (the boundary). The actual predicted cutoff from ML single endpoint
-        // would be better — but for 2-day build we use a ±3 heuristic on the last cutoff.
-        double predictedCutoff = lastCutoff + (round > 2 ? 0.5 : 1.0); // slight upward trend heuristic
-
-        // Target range: 5 below predicted (MODERATE) to 10 above (SAFE)
-        double targetMin = Math.max(0, predictedCutoff - 5.0);
-        double targetMax = Math.min(100, predictedCutoff + 10.0);
-
-        // Count students in app who viewed any college in this range (proxy for eligible pool)
-        long eligible = viewRepo.countPotentialTargets(collegeCode, targetMin, targetMax,
-            capCategoryCode != null ? extractCategory(capCategoryCode) : null);
-
-        // Count students who already shortlisted this college in this range
-        long alreadyShortlisted = shortlistRepo.countExistingShortlists(
-            collegeCode, courseCode, targetMin, targetMax,
-            capCategoryCode != null ? extractCategory(capCategoryCode) : null);
+        long eligible = viewRepo.countPotentialTargets(collegeCode, targetMin, targetMax, category);
+        long already  = shortlistRepo.countExistingShortlists(
+            collegeCode, courseCode, targetMin, targetMax, category);
 
         TargetPoolResponse resp = new TargetPoolResponse();
-        resp.collegeCode           = collegeCode;
-        resp.courseCode            = courseCode;
-        resp.capCategoryCode       = capCategoryCode;
-        resp.targetMin             = Math.round(targetMin * 100.0) / 100.0;
-        resp.targetMax             = Math.round(targetMax * 100.0) / 100.0;
+        resp.collegeCode            = collegeCode;
+        resp.courseCode             = courseCode;
+        resp.capCategoryCode        = capCategoryCode;
+        resp.targetMin              = targetMin;
+        resp.targetMax              = targetMax;
         resp.estimatedEligibleInApp = eligible;
-        resp.alreadyShortlistedUs  = alreadyShortlisted;
-        resp.notYetAware           = Math.max(0, eligible - alreadyShortlisted);
-        resp.note = "Eligible students are those who used the app with matching percentile and category. " +
-                    "Actual DTE-registered student count will be higher.";
+        resp.alreadyShortlistedUs   = already;
+        resp.notYetAware            = Math.max(0, eligible - already);
+        resp.note = String.format(
+            "Last round cutoff: %.1f. Predicted next: %.1f. " +
+            "Target range %.1f–%.1f covers MODERATE to SAFE zone.",
+            lastCutoff, predictedCutoff, targetMin, targetMax);
         return resp;
     }
 
     // ══════════════════════════════════════════════════════════════════════════
-    // FEATURE 3: TARGET RANGES (cutoff range to target, per branch+category)
+    // FEATURE 3: TARGET RANGES
     // ══════════════════════════════════════════════════════════════════════════
 
     public TargetRangesResponse getTargetRanges(String collegeCode, int round) {
@@ -176,72 +159,50 @@ public class CounsellingService {
 
         List<Object[]> rows = cutoffRepo.findLatestCutoffsByCollegeAndRound(collegeCode, round);
 
-        // Deduplicate: keep lowest cutoff (Round 4 closing) per branch+category combination
+        // Deduplicate by branch+category+gender
         Map<String, Object[]> dedupMap = new LinkedHashMap<>();
         for (Object[] r : rows) {
-            String key = r[0] + "_" + r[2] + "_" + r[3]; // courseCode_capCatCode_gender
+            String key = r[0] + "_" + r[2] + "_" + r[3];
             dedupMap.putIfAbsent(key, r);
         }
 
-        // Build branch target ranges — call ML for each unique course+category
-        List<Double> cutoffValues = dedupMap.values().stream()
-            .map(r -> (Double) r[4])
-            .collect(Collectors.toList());
-
-        // Use ML batch to get probabilities at cutoff boundary (gives us the calibration baseline)
-        // We call ML with the cutoff as student percentile to confirm sigmoid scale
-        List<Double> mlPredictions = new ArrayList<>();
-        for (Object[] r : dedupMap.values()) {
-            double co = (Double) r[4];
-            // Predicted = last cutoff ± trend. We look at how close this is to avg:
-            // Simple: use ML batch with the cutoff + 2.0 (slight upward pressure per round)
-            double pseudoStudent = co + 2.0;
-            List<Double> prob = mlClient.getBatchProbabilities(pseudoStudent, List.of(co));
-            // prob.get(0) tells us how confident a student at cutoff+2 is
-            // Reverse-engineer: predicted next cutoff ≈ co + (round < 3 ? 1.5 : 0.5)
-            mlPredictions.add(co + (round < 3 ? 1.5 : 0.5));
-        }
-
         List<BranchTargetRange> branches = new ArrayList<>();
-        int i = 0;
         for (Object[] r : dedupMap.values()) {
-            String courseCode     = (String)  r[0];
-            String courseName     = (String)  r[1];
-            String capCatCode     = (String)  r[2];
-            String gender         = (String)  r[3];
-            Double lastCutoff     = (Double)  r[4];
-            int    intake         = r[5] != null ? ((Number) r[5]).intValue() : 0;
-            double predictedCutoff = mlPredictions.get(i++);
+            String courseCode      = (String) r[0];
+            String courseName      = (String) r[1];
+            String capCatCode      = (String) r[2];
+            String gender          = (String) r[3];
+            Double lastCutoff      = r[4] != null ? (Double) r[4] : 50.0;
+            int    intake          = r[5] != null ? ((Number) r[5]).intValue() : 0;
 
-            double targetMin = Math.max(0,   Math.round((predictedCutoff - 5.0) * 10.0) / 10.0);
-            double targetMax = Math.min(100, Math.round((predictedCutoff + 10.0) * 10.0) / 10.0);
+            double predictedCutoff = lastCutoff + (round < 3 ? 1.5 : 0.5);
+            double targetMin       = Math.max(0,   Math.round((predictedCutoff - 5.0)  * 10.0) / 10.0);
+            double targetMax       = Math.min(100, Math.round((predictedCutoff + 10.0) * 10.0) / 10.0);
+            String trend           = predictedCutoff > lastCutoff + 0.5 ? "RISING"
+                                   : predictedCutoff < lastCutoff - 0.5 ? "FALLING" : "STABLE";
+            String category        = extractCategory(capCatCode);
 
-            String trend = predictedCutoff > lastCutoff + 0.5 ? "RISING"
-                         : predictedCutoff < lastCutoff - 0.5 ? "FALLING" : "STABLE";
-
-            long already = shortlistRepo.countExistingShortlists(
-                collegeCode, courseCode, targetMin, targetMax, extractCategory(capCatCode));
-            Double avgPct = shortlistRepo.avgPercentileForBranch(collegeCode, courseCode);
+            long   already  = shortlistRepo.countExistingShortlists(
+                                collegeCode, courseCode, targetMin, targetMax, category);
+            Double avgPct   = shortlistRepo.avgPercentileForBranch(collegeCode, courseCode);
 
             BranchTargetRange btr = new BranchTargetRange();
-            btr.courseCode            = courseCode;
-            btr.courseName            = courseName;
-            btr.capCategoryCode       = capCatCode;
-            btr.category              = extractCategory(capCatCode);
-            btr.gender                = gender;
-            btr.intake                = intake;
-            btr.lastRoundCutoff       = lastCutoff;
-            btr.predictedCutoff       = Math.round(predictedCutoff * 100.0) / 100.0;
-            btr.predictionConfidence  = round == 4 ? "HIGH" : round >= 2 ? "MEDIUM" : "LOW";
-            btr.targetMin             = targetMin;
-            btr.targetMax             = targetMax;
-            btr.alreadyShortlisted    = already;
+            btr.courseCode              = courseCode;
+            btr.courseName              = courseName;
+            btr.capCategoryCode         = capCatCode;
+            btr.category                = category;
+            btr.gender                  = gender;
+            btr.intake                  = intake;
+            btr.lastRoundCutoff         = lastCutoff;
+            btr.predictedCutoff         = Math.round(predictedCutoff * 100.0) / 100.0;
+            btr.predictionConfidence    = round == 4 ? "HIGH" : round >= 2 ? "MEDIUM" : "LOW";
+            btr.targetMin               = targetMin;
+            btr.targetMax               = targetMax;
+            btr.alreadyShortlisted      = already;
             btr.avgInterestedPercentile = avgPct != null ? Math.round(avgPct * 10.0) / 10.0 : null;
             btr.rationale = String.format(
-                "Last round cutoff was %.1f. Predicted %.1f (%s trend). " +
-                "Target students in %.1f–%.1f range: 5 points below (MODERATE zone) " +
-                "to 10 above (SAFE zone).",
-                lastCutoff, predictedCutoff, trend, targetMin, targetMax);
+                "Last cutoff: %.1f. Predicted: %.1f (%s). Target %.1f–%.1f.",
+                lastCutoff, btr.predictedCutoff, trend, targetMin, targetMax);
             branches.add(btr);
         }
 
@@ -254,7 +215,7 @@ public class CounsellingService {
     }
 
     // ══════════════════════════════════════════════════════════════════════════
-    // FEATURE 4: CUTOFF HISTORY + PREDICTION (branch-wise)
+    // FEATURE 4: CUTOFF HISTORY — FIXED (broken nested computeIfAbsent removed)
     // ══════════════════════════════════════════════════════════════════════════
 
     public CutoffHistoryResponse getCutoffHistory(String collegeCode) {
@@ -263,66 +224,59 @@ public class CounsellingService {
 
         List<Object[]> rows = cutoffRepo.findCutoffHistoryByCollegeCode(collegeCode);
 
-        // Structure: courseCode → courseName, intake, capCatCode+gender → [round→cutoff]
-        // Key: courseCode_capCatCode_gender
+        // branchMap: courseCode → BranchCutoffHistory
         Map<String, BranchCutoffHistory> branchMap = new LinkedHashMap<>();
-        // inner key: capCatCode_gender → CategoryCutoffHistory
+        // catMap: courseCode → catKey → CategoryCutoffHistory
         Map<String, Map<String, CategoryCutoffHistory>> catMap = new LinkedHashMap<>();
 
         for (Object[] r : rows) {
-            String courseCode  = (String)  r[0];
-            String courseName  = (String)  r[1];
-            String capCatCode  = (String)  r[2];
-            String gender      = (String)  r[3];
-            int    round       = ((Number) r[4]).intValue();
-            Double cutoff      = (Double)  r[5];
-            int    intake      = r[6] != null ? ((Number) r[6]).intValue() : 0;
+            String courseCode = (String)  r[0];
+            String courseName = (String)  r[1];
+            String capCatCode = (String)  r[2];
+            String gender     = (String)  r[3];
+            int    round      = ((Number) r[4]).intValue();
+            Double cutoff     = (Double)  r[5];
+            int    intake     = r[6] != null ? ((Number) r[6]).intValue() : 0;
 
+            // Ensure branch entry
             branchMap.computeIfAbsent(courseCode,
                 k -> new BranchCutoffHistory(courseCode, courseName, intake));
 
-            catMap.computeIfAbsent(courseCode, k -> new LinkedHashMap<>())
-                  .computeIfAbsent(capCatCode + "_" + gender,
-                      k -> new CategoryCutoffHistory(capCatCode, gender))
-                  .roundHistory = catMap.computeIfAbsent(courseCode, k -> new LinkedHashMap<>())
-                      .computeIfAbsent(capCatCode + "_" + gender,
-                          k -> { CategoryCutoffHistory c = new CategoryCutoffHistory(capCatCode, gender);
-                                 c.roundHistory = new ArrayList<>(); return c; })
-                      .roundHistory;
+            // Ensure inner map
+            catMap.computeIfAbsent(courseCode, k -> new LinkedHashMap<>());
 
-            catMap.get(courseCode)
-                  .get(capCatCode + "_" + gender)
-                  .roundHistory.add(new RoundCutoff(round, cutoff));
+            // Ensure category entry — FIXED: no nested lambda
+            String catKey = capCatCode + "_" + gender;
+            Map<String, CategoryCutoffHistory> innerMap = catMap.get(courseCode);
+            if (!innerMap.containsKey(catKey)) {
+                CategoryCutoffHistory cat = new CategoryCutoffHistory(capCatCode, gender);
+                cat.roundHistory = new ArrayList<>();
+                innerMap.put(catKey, cat);
+            }
+            innerMap.get(catKey).roundHistory.add(new RoundCutoff(round, cutoff));
         }
 
-        // Compute ML predictions and trends, attach to each category
+        // Compute predictions and trends
         List<BranchCutoffHistory> branchList = new ArrayList<>();
         for (Map.Entry<String, BranchCutoffHistory> entry : branchMap.entrySet()) {
-            String courseCode = entry.getKey();
-            BranchCutoffHistory branch = entry.getValue();
-            Map<String, CategoryCutoffHistory> cats = catMap.getOrDefault(courseCode, Map.of());
+            String              courseCode = entry.getKey();
+            BranchCutoffHistory branch     = entry.getValue();
+            Map<String, CategoryCutoffHistory> cats =
+                catMap.getOrDefault(courseCode, Collections.emptyMap());
 
             List<CategoryCutoffHistory> catList = new ArrayList<>();
             for (CategoryCutoffHistory cat : cats.values()) {
-                // Sort rounds ascending
                 cat.roundHistory.sort(Comparator.comparingInt(rc -> rc.round));
-
-                // Get last round cutoff for ML input
                 if (!cat.roundHistory.isEmpty()) {
-                    RoundCutoff last = cat.roundHistory.get(cat.roundHistory.size() - 1);
-                    // ML: get predicted next cutoff
-                    List<Double> probs = mlClient.getBatchProbabilities(
-                        last.cutoffPercentile + 1.5, List.of(last.cutoffPercentile));
-                    // Heuristic: predicted ≈ last + 0.5-1.5 based on trend
-                    double firstCutoff = cat.roundHistory.get(0).cutoffPercentile;
-                    double trend = last.cutoffPercentile - firstCutoff;
-                    double predictedIncrement = cat.roundHistory.size() > 1
-                        ? Math.min(3.0, Math.max(-2.0, trend / cat.roundHistory.size()))
-                        : 0.5;
-                    cat.predictedNextCutoff = Math.round(
-                        (last.cutoffPercentile + predictedIncrement) * 100.0) / 100.0;
-                    cat.trend = predictedIncrement > 0.3 ? "RISING"
-                              : predictedIncrement < -0.3 ? "FALLING" : "STABLE";
+                    double last  = cat.roundHistory.get(cat.roundHistory.size() - 1).cutoffPercentile != null
+                                 ? cat.roundHistory.get(cat.roundHistory.size() - 1).cutoffPercentile : 50.0;
+                    double first = cat.roundHistory.get(0).cutoffPercentile != null
+                                 ? cat.roundHistory.get(0).cutoffPercentile : last;
+                    double trend = last - first;
+                    double inc   = cat.roundHistory.size() > 1
+                                 ? Math.min(3.0, Math.max(-2.0, trend / cat.roundHistory.size())) : 0.5;
+                    cat.predictedNextCutoff = Math.round((last + inc) * 100.0) / 100.0;
+                    cat.trend = inc > 0.3 ? "RISING" : inc < -0.3 ? "FALLING" : "STABLE";
                 }
                 catList.add(cat);
             }
@@ -337,22 +291,20 @@ public class CounsellingService {
         return resp;
     }
 
-    // ── Helper: extract human-readable category from capCategoryCode ──────────
-    // GOPENH → OPEN, GOBCS → OBC, LSCS → SC, EWS → EWS, etc.
+    // ── Helper ────────────────────────────────────────────────────────────────
     private String extractCategory(String capCode) {
         if (capCode == null) return null;
-        if (capCode.equals("EWS") || capCode.equals("TFWS")) return capCode;
-        // Remove G/L prefix, remove H/S/O suffix
+        if ("EWS".equals(capCode) || "TFWS".equals(capCode)) return capCode;
         String mid = capCode.replaceAll("^[GL]", "").replaceAll("[HSO]$", "");
         return switch (mid) {
-            case "OPEN" -> "OPEN";
-            case "OBC"  -> "OBC";
-            case "SC"   -> "SC";
-            case "ST"   -> "ST";
+            case "OPEN"      -> "OPEN";
+            case "OBC"       -> "OBC";
+            case "SC"        -> "SC";
+            case "ST"        -> "ST";
             case "NT1", "VJ" -> "NT1";
-            case "NT2"  -> "NT2";
-            case "NT3"  -> "NT3";
-            default     -> mid;
+            case "NT2"       -> "NT2";
+            case "NT3"       -> "NT3";
+            default          -> mid;
         };
     }
 }
